# physical-ai-and-humanoid-robotics-book

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  HUGGINGFACE_DEPLOYMENT_GUIDE.md  README.md  docusaurus.config.ts  package-lock.json  package.json  pyproject.toml  sidebars.ts
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env  Dockerfile.nodejs  Dockerfile.python  Dockerfile.python.backup  README.md  auth-server.ts  auth.config.ts  package-lock.json  run_migrations.py  safe_migrate.py  test_auth_accessibility.py  test_edge_cases.py  validation_script.py
backend/app/: auth.py  auth_middleware.py  config.py  database.py  database_migrations.py  embeddings.py  main.py  middleware.py  security.py  vector_db.py
backend/docs/: auth-integration.md  consent-revocation.md  database-schema.md  integration-guide.md  session-privacy.md
backend/ingestion/: __init__.py  chunker.py  content_extractor.py  embedding_service.py  sitemap_parser.py  vector_storage.py
data/: resources.json
docs/: 01-intro.md  02-tooling.md  03-init.md  04-speckit.md  05-cicd.md  06-writing.md  07-diagrams.md  08-validation.md  09-deployment.md  10-versioning.md  conclusion.md  intro.md
nodejs-backend/: .dockerignore  Dockerfile  README.md  auth-server.ts  auth.config.ts  init-neon.js  neon-config.js  neon-http-adapter.ts  package-lock.json  package.json  tsconfig.json  ws-polyfill.js
src/css/: custom.css  (+2 more)
(+191 files in other folders)
